--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,3 +62,11 @@
   font-size: 0.5em;
   color:red;
 }
+
+.login-container{
+  margin: 200px 0 0 0;
+}
+
+.signup-container{
+  margin: 120px 0 0 0;
+}
