--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,8 +38,8 @@
   }
 }
 
-.container {
-  margin: 80px 0 0 0;
+.login-container {
+  margin: 80px 0 80px 0;
 }
 
 .signup-manufacturer-title {
@@ -80,7 +80,7 @@
 
 
 .signup-container {
-  margin: 120px 0 0 0;
+  margin: 40px 0 80px 0;
 }
 
 .bg-white {
