--- a/client/src/App.css
+++ b/client/src/App.css
@@ -119,7 +119,7 @@
   position: relative;
   top:0;
   font-family: 'Quicksand', sans-serif;
-  margin: 0 0 150px 0;
+  margin: 0 0 0 0;
   
 }
 .title-header{
