--- a/client/src/App.css
+++ b/client/src/App.css
@@ -202,3 +202,17 @@
 .h3 {
   margin-top: 25px;
 }
+
+.designer-registration {
+  position: relative;
+  left: 450px;
+}
+
+.manufacturer-registration {
+  position: relative;
+  left: 450px;
+}
+
+.register-title {
+  margin-top: 20px;
+}
